--- a/style.css
+++ b/style.css
@@ -1,39 +1,143 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto ;
 }
 
 body{
-    background-image: url('image.svg');
-   
+    background: #B2B6F7;
 }
- .input_fields{
-     justify-content: center;
+
+h1{
+  text-align: center;
+  color: #fff;
+  margin-top: 20px;
+  
+}
+
+img{
+  width: 100px;
+  height: 100px;
+  transform: translate(20%,-80%);
+  margin-left: 44%;
+}
+
+.logo{
+
+  margin-left: 40px;
+  margin-top: 30px;
+  width: 70px;
+  height: 70px;
+
+}
+
+h2{
+  text-align: center;
+  color: #fff;
+  transform: translate(0%,-130%);
+ 
+}
+.input_fields {
+  justify-content: center;
      align-items: center;
-     
-     transform: translate(-50%,-50%);
+     transform: translate(-50%,-20%);
      top: 50%;
      left: 50%;
      position: absolute;
      color: #fff;
- }
+}
 
- .input_fields input{
-     padding: 8px;
-     margin-bottom: 10px;
-     width: 100%;
-     
- }
 
- .input_fields input[type="button"]{
-     align-items: center;
-     justify-content: center;
-     text-align: center;
-     margin-top: 20px;
-     width:50%;
-     border: none;
-     margin-left: 50px;
-     background-color:violet;
-     cursor: pointer;
-    
- }
+#lbl {
+  color: white;
+  font-size: 20px;
+
+}
+
+
+
+.input_fields input{
+  padding: 10px;
+  margin-bottom: 10px;
+  width:250px;
+  border:#979797;
+  background: #D8D8D8;
+  
+}
+
+
+.input_fields input[type="button"]{
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+ 
+  transform: translate(15%,20%);
+  width:200px;
+  border: none;
+  background-color:#2B98EA;
+  cursor: pointer;
+  color:white;
+  font-size: 15px;
+  padding: 8px;
+}
+
+::-webkit-input-placeholder {
+  font-size: 15px;
+  
+}
+
+
+#email_success_Msg{
+  font-weight: bolder;
+  color: #00ff00;
+ 
+}
+
+#email_error_Msg{
+  font-weight: bolder;
+  color: #ff0000;
+ 
+}
+
+
+#pass_success_Msg{
+  font-weight: bolder;
+  color: #00ff00;
+ 
+}
+
+#pass_error_Msg{
+  font-weight: bolder;
+  color: #ff0000;
+ 
+}
+
+#name_success_Msg{
+  font-weight: bolder;
+  color: #00ff00;
+ 
+}
+
+#name_error_Msg{
+  font-weight: bolder;
+  color: #ff0000;
+ 
+}
+
+#surname_success_Msg{
+  font-weight: bolder;
+  color: #00ff00;
+ 
+}
+
+#surname_error_Msg{
+  font-weight: bolder;
+  color: #ff0000;
+ 
+}
+
+.like{
+  width: 30px;
+  height: 30px;
+  transform: translate(-20%,60%);
+}
